src/widgets/snapshots/rstv__widgets__cluster__tests__snapshot_checkboxes.snap
---
source: src/widgets/cluster.rs
expression: "snapshot_cluster(&mut c, 14, 3)"
---
size: 14x3
cursor: hidden
text:
| [X] Alpha    |
| [ ] Beta     |
| [X] Gamma    |
attr:
|aaaaabaaaaaaaa|
|cccccccccccccc|
|aaaaaaaaaaaaaa|
legend:
  . default
  a fg=RGB(0,0,0) bg=RGB(0,170,170)
  b fg=RGB(255,255,85) bg=RGB(0,170,170)
  c fg=RGB(255,255,255) bg=RGB(0,170,170)
